@@ -191,7 +191,7 @@ public class SecurityPoliciesActions {
                 processRuntimeBundleSteps.getTaskByProcessInstanceId(processInstance.getId())
             );
             assertThat(tasks).isNotEmpty();
-            currentTask = tasks.get(0);
+            currentTask = tasks.getFirst();
             assertThat(currentTask).isNotNull();
         }
 
